Работает все, кроме коректного закрытия сервера. Не составлен конфиг для сервера.